# experiments-2026-FGCS-dt-aggregates-for-adaptive-MLOps

./: .env  CHANGELOG.md  package-lock.json  pyproject.toml  release.config.js
.github/workflows/: build-and-deploy.yml
src/centralized/: main.py
src/common/: __init__.py
src/distributed/: DT.py  DTAggregate.py  LearningConfig.py  Monitors.py  Simulator.py  main.py  utils.py
src/preprocess/: label.py  split-by-patient.py
