[tool.poetry]
name = "experiments-2026-FGCS-dt-aggregates"
version = "0.1.0"
description = ""
authors = ["Davide Domini <davide.domini@unibo.it>"]
readme = ""

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^3.0.2"
torch = "^2.11.0"
matplotlib = "^3.10.7"
codecarbon = "^3.2.6"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
